--- a/blocks/examples/__title/examples__title.css
+++ b/blocks/examples/__title/examples__title.css
@@ -5,3 +5,9 @@
     font-size: 50px;
     margin: 0 auto 0;
 }
+
+@media screen and (max-width: 568px) {
+    .examples__title {
+        font-size: 40px;
+    }
+}
