--- a/blocks/footer/__social/footer__social.css
+++ b/blocks/footer/__social/footer__social.css
@@ -1,4 +1,10 @@
 .footer__social {
     display: flex;
     flex-direction: row;
+    list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 0px;
 }
