--- a/blocks/example/example.css
+++ b/blocks/example/example.css
@@ -19,6 +19,11 @@
     margin: 50px auto 0;
     padding-left: 0;
     list-style-type: none;
+    margin-top: 1em;
+    margin-bottom: 1 em;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 40px;
 }
 
 @media screen and (max-width: 1024px) {
