--- a/blocks/about/__image/about__image.css
+++ b/blocks/about/__image/about__image.css
@@ -10,6 +10,14 @@
     opacity: 1;
 }
 
+@media screen and (max-width: 1024px) {
+    .about__image {
+        width: 180px;
+        height: 180px;
+        margin-right: 10px;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .about__image {
         margin: 0 auto 0;
