--- a/blocks/about/__paragraph/about__paragraph.css
+++ b/blocks/about/__paragraph/about__paragraph.css
@@ -2,8 +2,7 @@
     font-family: 'Inter', Courier, monospace;
     color: #ffffff;
     font-size: 21px;
-    /*margin: 0 auto 35px;*/
-    margin-left: 30px;
+    margin: 0 auto 35px;
     max-width: 600px;
 }
 
@@ -16,5 +15,6 @@
 @media screen and (max-width: 768px) {
     .about__paragraph {
         font-size: 15px;
+        max-width: 340px;
     }
 }
