--- a/blocks/about/__text/about__text.css
+++ b/blocks/about/__text/about__text.css
@@ -1,4 +1,12 @@
 .about__text {
     display: flex;
     flex-direction: column;
+    margin: 0 auto 0;
+    justify-content: center;
+}
+
+@media screen and (max-width: 768px) {
+    .about__text {
+        margin-top: 20px;
+    }
 }
