--- a/blocks/language/__bar/language__bar.css
+++ b/blocks/language/__bar/language__bar.css
@@ -24,7 +24,7 @@
     background: rgb(82, 232, 63);
     /*z-index: -1;*/
     border-radius: 25px;
-    /*animation: slide 1s linear reverse;*/
+    animation: slide 1s linear reverse;
 }
 
 .language__bar:after {
@@ -38,18 +38,17 @@
     /*z-index: -2;*/
     filter: blur(20px);
     border-radius: 15px;
-    /*animation: slide 1s linear reverse;*/
+    animation: slide 1s linear reverse;
 }
 
-
-/*@keyframes slide {
+@keyframes slide {
     0% {
         left: 0%;
     }
     100% {
         right: 100%;
     }
-}*/
+}
 
 @media screen and (max-width: 768px) {
     .language__bar {
